improved validator, added class to fix departure time issues